# drf-retail-network-project

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: develop.yml  main.yml
config/: settings.py  urls.py
coverage/: coverage-report.txt
network/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
network/migrations/: 0001_initial.py
tests/: test_network_node.py  test_network_node_contact.py  test_network_node_products.py  test_user.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
